Changes to Version 2.0-3

  o Updated Polisch translation (with thanks to Lukasz Daniel).

Changes to Version 2.0-2

  o Moved knitr and markdown packages to Suggests: (suggestion of Dirk Eddelbuettel).

  o Updated Japanese translation of Getting Started manual (by Takaharu Araki).

  o Added editing buttons with tooltips to Rcmdr editor.

  o Added Mac OS X command-key combinations.

  o Tweaks to ttk theme and font handling (with help of Philippe Grosjean and the tcltk2 package).

  o Small bug fixes.

Changes to Version 2.0-1

  o Caching of variable names, factor names, etc., to improve menu refreshes in large data sets (in response to observation of Yoshinobu Kanda).

  o Updated translations (with thanks to the translators): French (Milan Bouchet-Valat), Japanese (Takaharu Araki).

  o Most errors now removed from R Markdown and knitr documents.

  o New editor for R Markdown and knitr documents; small addition to Getting Started manual to describe the editor.

  o Stem-and-leaf dialog now supports back-to-back stem-and-leaf displays.

  o Small corrections to the R-Rcmdr.pot file.

  o Small bug fixes.

Changes to Version 2.0-0

  o New package co-author: Milan Bouchet-Valat. 

  o Many changes to style of dialogs: tabs, Reset button, Apply button, small interface improvements.

  o Support for R Markdown, with script and Rmd tabs.

  o Expanded Options dialog and new Save Options dialog.

  o Better handling of default fonts.

  o Improved probability plots. 

  o Introduced plotDistr(), lineplot(), indexplot() convenience functions.

  o New nonparametric density estimate dialog.

  o Use automatic point identification as default in plot dialogs.

  o Calls to deprecated functions .find.package() and .path.package() replaced by find.package() and path.package() (suggestion of Brian Ripley).

  o Partial correlations now optionally report pairwise p-values (suggestion of Aaron Swink).

  o Removed Sciviews support code.

  o Small fixes.
